--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 */
 
 body {
-  background-color: #a44c9f;
+  background-color: #3a383a;
   color: #666;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
@@ -65,20 +65,20 @@ table {
 ** Website Logo
 ** -----------------------------------------------------------------------------
 */
-
 #logo {
-  width: 100%;
-  min-height: 250px;
-  margin-left: auto;
-  margin-right: auto;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image:
-    radial-gradient(rgba(126, 0, 119, 0.15),
-    rgba(126, 0, 119, 0.75)),
-    url("../images/kitchen-banner.jpg");
+    width: 100%;
+    min-height: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image:
+        radial-gradient(rgb(28 26 28 / 15%),
+        rgb(48 38 48 / 35%)),
+        url(../images/kitchen-banner.jpg);
 }
+
 #logo img {
   height: 100px;
   width: auto;
@@ -109,14 +109,14 @@ table {
   margin-bottom: 12px;
 }
 .category-item {
-  border: 2px;
-  border-color: #ff58df;
-  border-radius: 2.5px;
-  border-style: solid !important;
-  background-color: #a44c9f;
-  color: #f9f9f9;
-  font-weight: bold;
-  margin-top: 6px;
+    border: 2px;
+    border-color: #2a8fd7;
+    border-radius: 2.5px;
+    border-style: solid !important;
+    background-color: #382b35;
+    color: #f9f9f9;
+    font-weight: bold;
+    margin-top: 6px;
 }
 .category-item i {
   padding-top: 6px;
@@ -332,4 +332,8 @@ footer {
 .footer-author a {
   color: #f9f9f9;
   font-weight: bold;
+}
+
+.col-sm-12{
+    margin-bottom: 15px;
 }
